cmake_minimum_required(VERSION 3.25)
project(Assignment_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(Assignment_2 main.cpp Headers/Florist.h Headers/Wholesaler.h Headers/Grower.h Headers/FlowersBouquet.h Headers/DeliveryPerson.h Headers/FlowerArranger.h Headers/Gardener.h Headers/Person.h Headers/Person.cpp Headers/Person.h Headers/Florist.cpp Headers/Florist.cpp Headers/Florist.cpp Headers/Wholesaler.cpp Headers/Grower.cpp Headers/Gardener.cpp Headers/FlowerArranger.cpp Headers/DeliveryPerson.cpp Headers/FlowersBouquet.cpp )
